feat: Set default user status to PENDING during creation
